{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 207,
  "lineage": "1b033503-7b17-5a52-514c-c6de582d1f11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0858d0a57916dbb56",
            "association_id": "eipassoc-05bc9507bb4d66ee3",
            "domain": "vpc",
            "id": "eipalloc-0858d0a57916dbb56",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-051c3f841ac628b2c",
            "private_dns": "ip-10-0-1-167.eu-west-3.compute.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-15-236-159-80.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.159.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141115429158:internet-gateway/igw-08aedece89039c6ea",
            "id": "igw-08aedece89039c6ea",
            "owner_id": "141115429158",
            "vpc_id": "vpc-0e0055bf8413ebc35"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:loadbalancer/net/test/65022d79adfed6b6",
            "arn_suffix": "net/test/65022d79adfed6b6",
            "dns_name": "test-65022d79adfed6b6.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:loadbalancer/net/test/65022d79adfed6b6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0858d0a57916dbb56",
                "subnet_id": "subnet-003a0626c14c9549f"
              }
            ],
            "subnets": [
              "subnet-003a0626c14c9549f"
            ],
            "vpc_id": "vpc-0e0055bf8413ebc35",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "aws_eip.test",
            "aws_subnet.public_a",
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:listener/net/test/65022d79adfed6b6/5cb1026f00ca6ea4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:targetgroup/test/253e39d6ac8f9da4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:listener/net/test/65022d79adfed6b6/5cb1026f00ca6ea4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:loadbalancer/net/test/65022d79adfed6b6",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test",
            "aws_lb.test",
            "aws_lb_target_group.test-tg",
            "aws_subnet.public_a",
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:targetgroup/test/253e39d6ac8f9da4",
            "arn_suffix": "targetgroup/test/253e39d6ac8f9da4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:141115429158:targetgroup/test/253e39d6ac8f9da4",
            "lambda_multi_value_headers_enabled": false,
            "name": "test",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e0055bf8413ebc35"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08aedece89039c6ea",
            "id": "r-rtb-0c3f1e363a93e704b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3f1e363a93e704b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141115429158:security-group/sg-0864a0302263fe13a",
            "description": "Allow TLS inbound traffic on port 80 (http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0864a0302263fe13a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test",
            "name_prefix": "",
            "owner_id": "141115429158",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0055bf8413ebc35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141115429158:subnet/subnet-003a0626c14c9549f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a0626c14c9549f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141115429158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e0055bf8413ebc35"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141115429158:subnet/subnet-08b17774800863c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b17774800863c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141115429158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e0055bf8413ebc35"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_example_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141115429158:vpc/vpc-0e0055bf8413ebc35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09de3e17957366063",
            "default_route_table_id": "rtb-0c3f1e363a93e704b",
            "default_security_group_id": "sg-063a73669608c7ebd",
            "dhcp_options_id": "dopt-0b48cb300869728c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0055bf8413ebc35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3f1e363a93e704b",
            "owner_id": "141115429158"
          }
        }
      ]
    }
  ]
}